--- a/FociWebapp/Pages/Shared/_Layout.cshtml
+++ b/FociWebapp/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MeccsekKilistazasa">Adatok</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/UjMerkozesFelvetele">Adatfelvétel</a>
                         </li>
                     </ul>
                 </div>
