Adatok felvétele mukodése

--- a/FociWebapp/Pages/Shared/_Layout.cshtml
+++ b/FociWebapp/Pages/Shared/_Layout.cshtml
@@ -20,13 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Otthon</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/MeccsekKilistazasa">Adatok</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MeccsekKilistazasa">Meccsekkilistázása</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/UjMerkozesFelvetele">Adatfelvétel</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/UjMerkozesFelvetele">UjMerkozesekFelvétele</a>
                         </li>
                     </ul>
                 </div>
