--- a/FociWebapp/Pages/Shared/_Layout.cshtml
+++ b/FociWebapp/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/UjMerkozesFelvetele">UjMerkozesekFelvétele</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Tabella">Tabella</a>
+                        </li>
                     </ul>
                 </div>
             </div>
